<resources>
    <string name="app_name">TB01</string>
    <string name="tv_home">Makan apa hari ini?</string>
    <string name="title_home">Makan Apa</string>
    <string name="btn_cari">Cari</string>
    <string name="header_menu">Menu</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>

    <string name="tv_menu_item_text">Menu title</string>
    <string name="tv_food_item_text">Food name</string>

    <string name="tv_food_name">Nama makanan :</string>
    <string name="tv_food_desc">Deskripsi makanan :</string>
    <string name="tv_food_tags">Tags :</string>
    <string name="tv_food_ingredients">Bahan digunakan :</string>
    <string name="tv_food_steps">Langkah membuat :</string>
    <string name="tv_food_restaurants">Tersedia di restoran :</string>

    <string name="et_addFood_hint_single"> </string>
    <string name="et_addFood_hint_enter">pisahkan dengan enter untuk lebih dari 1</string>
    <string name="btn_addFood_update">Add</string>
    <string name="btn_editFood_update">Save</string>
    <string name="et_search_list_hint">cari makanan apa ?</string>

    <string name="tv_setting_theme">Toggle Dark Theme</string>
    <string name="tv_setting_import">Reimport Food Menu List</string>
    <string name="tv_setting_clear_food">Clear All Food Menu</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="trash_desc">Delete Button</string>
</resources>