<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_name"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:importantForAutofill="no"
            android:hint="@string/et_addFood_hint_single"
            android:inputType="text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_desc"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_addFood_hint_single"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_tags"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_addFood_hint_enter"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_ingredients"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_addFood_hint_enter"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_steps"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_addFood_hint_enter"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_food_restaurants"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/et_editFood_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_addFood_hint_enter"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editFood_update"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>