<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_menu"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/tv_menu_title"
                android:paddingVertical="70dp"
                android:background="?attr/colorAccent"
                android:textColor="@color/Light"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_food_desc"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tv_desc"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_food_tags"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tv_tags"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_food_ingredients"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tv_bahan"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_food_steps"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tv_langkah"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_food_restaurants"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/tv_resto"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_edit_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/icon_edit"
        />
</RelativeLayout>